# obs-otel-lgtm

./: .gitignore  README.md  docker-compose.yml
.docker/: k6.dockerfile
.k6/: README.md
.k6/runners/: availability.js
.k6/scripts/: url-check.js
apps/: docker-compose.yml
apps/go-app/: .env.example  go.mod  telemetry.go
apps/node-app/: .env.example  Dockerfile  index.js  package-lock.json  telemetry.js
apps/rust-app/: .env.example  Cargo.toml
conf/: config.alloy  loki.yaml  mimir.yaml  otel-collector-config.yaml  otel-log-collector-config.yaml  tempo.yaml
go-app/: .env.example  .gitignore  go.mod  go.sum  magefile.go  telemetry.go
go-app/cmd/api/: main.go
grafana/definitions/: cadvisor.json  node_exporter.json
grafana/provisioning/dashboards/: cadvisor.json  dash.yml
grafana/provisioning/datasources/: datasources.yaml
node-app/: .env.example  index.js  otel.js  package-lock.json  package.json  telemetry.js
rust-app/: Cargo.toml
rust-app/src/: main.rs  telemetry.rs
