[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[features]
sync-middleware = []

[dependencies]
actix-web = { version = "4.0", default-features = false, features = [
    "compress-zstd",
    "macros",
] }
log = "0.4.22"
env_logger = "0.11.3"
actix-web-opentelemetry = { version = "0.21.0", features = [
    "sync-middleware",
    "awc",
] }
opentelemetry-stdout = { version = "*", features = ["logs"] }
opentelemetry = { version = "0.28", features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
opentelemetry-appender-tracing = "0.28.1"
pyroscope = "0.5.8"
pyroscope_pprofrs = "0.2.8"
dotenv = "0.15.0"
